<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:paddingBottom="64dp">

        <EditText
            android:id="@+id/edit_text_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/distance"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:text="@string/total_kilometers" />

        <EditText
            android:id="@+id/edit_text_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/price"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:text="@string/price_per_liter" />

        <EditText
            android:id="@+id/edit_text_autonomy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/autonomy"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/kilometers_per_liter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/your_total_cost"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_view_cost_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/total_cost"
            android:textColor="@color/cyan_blue_medium_dark"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/green_cyan"
            android:padding="16dp"
            android:text="@string/calculate"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</ScrollView>